--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script src="main.js"></script>
     </head>
     <body>
         <center>
@@ -15,16 +14,17 @@
              <div class="login_div1">
                  <h3>Player 1 Login for game</h3>
                  <label>User Name:</label>
-                 <input style="width:30%" id="login_player1" type="text" placeholder="Player 1 Name">
+                 <input style="width:30%" id="player1_name" type="text" placeholder="Player 1 Name">
              </div>  
              <br>
              <div class= "login_div2">
                 <h3>Player 2 Login for game</h3>
                 <label>User Name:</label>
-                <input style="width:30%" id="login_player2" type="text" placeholder="Player 2 Name">
+                <input style="width:30%" id="player2_name" type="text" placeholder="Player 2 Name">
             </div> 
             <br>
             <button id="login" onclick="login()" class="btn btn-danger">Login</button>  
         </center>
+        <script src="main.js"></script>
     </body>
 </html>
